--- a/package.json
+++ b/package.json
@@ -2,6 +2,24 @@
   "name": "release-notes",
   "description": "An easy to use, human readable and machine processable schema for release notes.",
   "version": "0.0.1",
+  "author": "Alrik Zachert <alrik@craftup.cc>",
+  "keywords": [
+    "release notes",
+    "release-notes",
+    "releasenotes",
+    "release",
+    "notes",
+    "changelog"
+  ],
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/release-notes/release-notes-node/issues"
+  },
+  "repository": {
+    "url": "https://github.com/release-notes/release-notes-node"
+  },
+  "contributors": [
+    "Alrik Zachert <alrik@craftup.cc>"
+  ],
   "dependencies": {}
 }
