--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "Alrik Zachert <alrik@craftup.cc>"
   ],
   "dependencies": {
+    "ajv": "^5.2.0",
     "js-yaml": "^3.8.4",
     "@release-notes/schema": "^0.1.0"
   }
