--- a/release-notes.yml
+++ b/release-notes.yml
@@ -4,6 +4,10 @@ description: >
   an easy to use, human readable and machine processable schema for release notes.
 
 releases:
+- version: Next
+  added:
+  - Introduce ReleaseNotesWriter for writing release notes to a file. (#3)
+
 - version: 0.1.0
   date: 2017-07-07T18:22:00Z
   title: First Release
