--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "@release-notes/eslint-config": "^0.1.0",
     "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.6.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
