--- a/release-notes.yml
+++ b/release-notes.yml
@@ -7,6 +7,7 @@ releases:
 - version: Next
   added:
   - Introduce ReleaseNotesWriter for writing release notes to a file. (#3)
+  - Travis CI integration. Automated testing and releasing. (#5)
 
 - version: 0.1.0
   date: 2017-07-07T18:22:00Z
