Add release notes entries.

--- a/release-notes.yml
+++ b/release-notes.yml
@@ -4,6 +4,13 @@ description: >
   an easy to use, human readable and machine processable schema for release notes.
 
 releases:
+- version: Unreleased
+  added:
+  - Introduce `ReleaseNotesWriter.dumpReleaseNotes` for converting release notes into yaml.
+  - Add badges 🎉
+  - Add code of conduct and contribution guidelines.
+  changed:
+  - Empty fields will be ignored in `toJSON` method.
 - version: 0.2.0
   date: 2017-08-01T09:21:00Z
   added:
@@ -11,7 +18,6 @@ releases:
   - Travis CI integration. Automated testing and releasing. (#5)
   fixed:
   - Adjust mapping from and to Release Notes and Release instances, toJSON and fromJSON methods.
-
 - version: 0.1.0
   date: 2017-07-07T18:22:00Z
   title: First Release
